--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,1 +1,25 @@
 @CHARSET "UTF-8";
+.logo{
+    width: 180px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    float: left;
+}
+.logout{
+    float: right;
+    padding: 30px 15px 0 0;
+}
+.logout p{
+    display: inline;
+}
+a{
+    color: #ffffff;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
