完成管理员增加功能

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -17,6 +17,10 @@
 .logout p{
     display: inline;
 }
+.dialog-button{
+    text-align: center;
+}
+
 a{
     color: #ffffff;
     text-decoration: none;
