--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -3,10 +3,10 @@
 <div id="manager_tool" style="padding: 5px;">
     <div style="margin-bottom: 5px;">
         <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="manager_tool.add();">添加</a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-delete" plain="true" onclick="manager_tool.delete();">删除</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-delete" plain="true" onclick="manager_tool.remove();">删除</a>
         <a href="#" class="easyui-linkbutton" iconCls="icon-modify" plain="true" onclick="manager_tool.edit()">修改</a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="obj.add();">保存</a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" plain="true" onclick="obj.add();">取消编辑</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="manager_tool.reload()">刷新</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" plain="true" onclick="manager_tool.redo()">取消选择</a>
     </div>
 </div>
 <form id="manager_add" style="margin: 0;padding: 5px 0 0 25px;color: #333;">
@@ -16,7 +16,7 @@
 </form>
 
 <form id="manager_edit" style="margin: 0;padding: 5px 0 0 25px;color: #333;">
-    <input type="hidden" name="id" class="textbox" style="width: 200px;">
+    <input type="hidden" id="id" name="id" class="textbox" style="width: 200px;">
     <p>管理账号：<input type="text" name="manager_edit" class="textbox" style="width: 200px;" disabled="true"></p>
     <p>管理密码：<input type="password" name="password_edit" class="textbox" style="width: 200px;"></p>
     <p>分配权限：<input  id="auth_edit" class="textbox" name="auth_edit" style="width: 205px;"></p>
