药品限制->性别限制  查询方法

--- a/src/main/resources/static/easyui/themes/icon.css
+++ b/src/main/resources/static/easyui/themes/icon.css
@@ -134,3 +134,26 @@
 .icon-large-chart{
 	background:url('icons/large_chart.png') no-repeat center center;
 }
+.icon-drug{
+	background:url('icons/prescription_drugs.ico') no-repeat center center;
+}
+.icon-virus{
+	background:url('icons/virus.png') no-repeat center center;
+}
+.icon-syringe{
+	background:url('icons/syringe.ico') no-repeat center center;
+}
+.icon-treatment{
+	background:url('icons/treatment.png') no-repeat center center;
+}
+.icon-model{
+	background:url('icons/gameboy4iphone.png') no-repeat center center;
+}
+.icon-pie{
+	background:url('icons/pie-chart.png') no-repeat center center;
+}
+.icon-sex{
+	background:url('icons/sex_icon.png') no-repeat center center;
+}
+
+
