药品限制->医院等级限制 10%

--- a/src/main/resources/static/easyui/themes/icon.css
+++ b/src/main/resources/static/easyui/themes/icon.css
@@ -155,5 +155,9 @@
 .icon-sex{
 	background:url('icons/sex_icon.png') no-repeat center center;
 }
-
-
+.icon-body{
+	background:url('icons/ooopic.png') no-repeat center center;
+}
+.icon-hospital{
+	background:url('icons/hospital.png') no-repeat center center;
+}
