--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <body class="easyui-layout">
 	<div data-options="region:'north',title:'header',split:true,noheader:true"
 		style="height: 60px;background-color:#666">
-			<div class="logo">后台管理</div>
+			<div class="logo">阳光医保后台管理</div>
 			<div class="logout">你好, <p th:if="${not #lists.isEmpty(session.admin)}" >[[${session.admin.userName}]] </p>  |   <a href="/admin/logout">退出</a></div>
 		</div>
 	<div data-options="region:'south',title:'footer',split:true,noheader:true"
