完成门诊模拟40%

--- a/src/main/resources/static/easyui/themes/icon.css
+++ b/src/main/resources/static/easyui/themes/icon.css
@@ -194,3 +194,6 @@
 .icon-count{
 	background:url('icons/count.png') no-repeat center center;
 }
+.icon-prescription{
+	background:url('icons/prescription.png') no-repeat center center;
+}
