--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 		style="overflow:hidden;">
 			<div id="tabs">
 				<div title="起始页" iconCls="icon-home" style="padding:0 10px;display: block;">
-					<p>欢迎来到后台管理系统!</p>
+					<h1 style="margin: 0 auto;text-align:center;">欢迎来到后台管理系统!</h1>
 				</div>
 			</div>
 		</div>
