--- a/src/main/resources/static/easyui/themes/icon.css
+++ b/src/main/resources/static/easyui/themes/icon.css
@@ -197,3 +197,6 @@
 .icon-prescription{
 	background:url('icons/prescription.png') no-repeat center center;
 }
+.icon-good{
+	background:url('icons/okGood.png') no-repeat center center;
+}
