--- a/src/main/resources/templates/outP.html
+++ b/src/main/resources/templates/outP.html
@@ -103,6 +103,7 @@
                        data-options="
 				iconCls: 'icon-prescription',
 				singleSelect: true,
+				fitColumns:true,
 				toolbar: '#tb',
 				url: 'datagrid_data1.json',
 				method: 'get',
